--- a/_posts/2017-03-18-caching.md
+++ b/_posts/2017-03-18-caching.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Hooking WinAPI to improve Qt performance...
+title: Hooking WinAPI to improve Qt performance
 author: mrexodia
 website: http://mrexodia.cf
 
