better archive functionality

--- a/_posts/2017-03-18-caching.md
+++ b/_posts/2017-03-18-caching.md
@@ -3,6 +3,7 @@ layout: post
 title: Hooking WinAPI to improve Qt performance
 author: mrexodia
 website: http://mrexodia.cf
+contents: []
 
 ---
 
@@ -201,5 +202,3 @@ The profile also confirms that this helped and I noticed a small improvement in 
 That's it for today, have a good day!
 
 Duncan
-
-
