--- a/_posts/2017-03-18-caching.md
+++ b/_posts/2017-03-18-caching.md
@@ -9,7 +9,7 @@ contents: []
 
 Hello,
 
-First of all, apologies for the long absence. I have been dealing with personal issues and university, so writing this blog every week was an easy thing to cross off my list of things to do (especially considering I made it rather stressful for myself to produce these). I don't exactly know yet how I will approach this blog from now on, but it will definitely not be every week. Note: **If you have time, please write an entry for this blog! You can find more information [here](http://x64dbg.com/blog/2016/07/09/Looking-for-writers.html)**. If you want to write something but don't know exactly how, come in [contact](http://x64dbg.com/#contact) discuss a topic with us.
+First of all, apologies for the long absence. I have been dealing with personal issues and university, so writing this blog every week was an easy thing to cross off my list of things to do (especially considering I made it rather stressful for myself to produce these). I don't exactly know yet how I will approach this blog from now on, but it will definitely not be every week. Note: **If you have time, please write an entry for this blog! You can find more information [here](https://x64dbg.com/blog/2016/07/09/Looking-for-writers.html)**. If you want to write something but don't know exactly how, come in [contact](https://x64dbg.com/#contact) discuss a topic with us.
 
 Today I would like to discuss performance and how caching can drastically improve it. If you don't read this but use x64dbg, at least install the [GetCharABCWidthsI_cache](https://github.com/x64dbg/GetCharABCWidthsI_cache) plugin to take advantage of this performance improvement...
 
