Fix a bunch of dead links

--- a/_posts/2017-03-18-caching.md
+++ b/_posts/2017-03-18-caching.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hooking WinAPI to improve Qt performance
 author: mrexodia
-website: http://mrexodia.cf
+website: https://mrexodia.github.io
 contents: []
 
 ---
